# RAG-LLMOps

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile.test  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  run_evaluations.py  scripts_manual_chat.py
.github/workflows/: ci.yml  eval.yml
docs/: 00_overview.md  01_eval_gated_ci.md  02_token_streaming.md  03_hybrid_retrieval_rerank.md  04_agentic_corrective_rag.md
eval/: compare_reports.py  golden_dataset.jsonl  metrics.py  report.json  report_dense.json  report_hybrid.json  run_eval.py  thresholds.yaml
eval/corpus/: README.md  ai_engineering_report.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/exceptions/: custom_exception.py
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: agentic_rag.py  hybrid_retrieval.py  retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: document_ops.py  file_io.py  model_loader.py  session_store.py
notebook/: RAG.ipynb
scripts/: measure_ttft.sh
static/: styles.css
templates/: index.html
tests/: conftest.py
tests/integration/: test_chat_route.py  test_chat_stream_route.py  test_upload_route.py
tests/unit/: test_data_ingestion.py  test_rag_cache.py  test_retrieval.py  test_session_store.py  test_streaming.py
