[project]
name = "rag-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "fastembed>=0.8.0",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langsmith>=0.9.1",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "redis>=8.0.1",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
